<resources>
    <string name="app_name">WintervacationHomework</string>
    <string name="moon">月亮</string>
    <string name="sun">中心</string>
    <string name="star">星星</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="day_moon">心情便签</string>
    <string name="text_view">开始吧</string>
    <string name="sure">确定</string>
    <string name="text1">。*快写下属于自己</string>
    <string name="text2">的心灵鸡汤吧*。</string>
    <string name="log_user">请输入用户名</string>
    <string name="log_password">请输入密码</string>
    <string name="register_password">请再次输入密码</string>
    <string name="log">登录</string>
    <string name="click">点击注册</string>
    <string name="register">注册</string>
    <string name="zero">0</string>
    <string name="hui_yi">那年那人那事</string>
    <string name="busy_people">繁忙的人们</string>
    <string name="cq_beauty">美丽的重邮</string>
    <string name="handsome">帅气的教练</string>
    <string name="one">那些天，</string>
    <string name="two">无论刮风下雨</string>
    <string name="three">你们，</string>
    <string name="four">一直都在</string>
    <string name="five">因为你们，</string>
    <string name="six">军训时光才如此美好~</string>
    <string name="seven">在你离开回来的第一天，</string>
    <string name="eight">我们是如此的高兴</string>
    <string name="ten">但是，也就是晚上</string>
    <string name="eleven">让我们围着操场“游行”</string>
    <string name="twelve">生气地说着，</string>
    <string name="thirteen">我们走得什么都不是</string>
    <string name="fourteen">但是，后来……</string>
    <string name="fifteen">我只想说，</string>
    <string name="sixteen">教官，谢谢你！</string>
    <string name="seventeen">最后的最后</string>
    <string name="eighteen">因为彼此在乎，所以才舍不得……</string>
    <string name="nineteen">上了大学之后，</string>
    <string name="twenty">最常说的话，就是</string>
    <string name="twenty_one">没错，</string>
    <string name="twenty_two">上大学就是受打击的</string>
    <string name="twenty_three">但是，</string>
    <string name="twenty_four">因为这些</string>
    <string name="twenty_five">所以才能更好地认识自己</string>
    <string name="twenty_six">还有一群有共同梦想</string>
    <string name="twenty_nine">一起奋斗中的人</string>
    <string name="thirty">以此共勉</string>
    <string name="thirty_one">⁽⁽ଘ(ˊᵕˋ)ଓ⁾⁾</string>
    <string name="thirty_two">晚安</string>
    <string name="thirty_three">重邮</string>
    <string name="thirty_four">~明天再战~</string>
    <string name="input">请输入个性签名</string>
    <string name="start">点击开始输入</string>
    <string name="saying">良药苦口利于病，忠言逆耳利于行</string>
    <string name="personal_saying">个性签名</string>
    <string name="change_skin">换肤</string>
    <string name="bg1">背景1</string>
    <string name="bg2">背景2</string>
    <string name="bg3">背景3</string>
    <string name="bg4">背景4</string>
    <string name="bg5">背景5</string>
    <string name="happy_thing">快来写一些搞笑的事情吧</string>
    <string name="publish">发表</string>
</resources>
