<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/message"
        android:title="@string/personal_saying"/>

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/skin"
            android:title="@string/change_skin">

            <menu>

                <item
                    android:id="@+id/bk_one"
                    android:title="@string/bg1"/>

                <item
                    android:id="@+id/bk_two"
                    android:title="@string/bg2"/>

                <item
                    android:id="@+id/bk_three"
                    android:title="@string/bg3"/>

                <item
                    android:id="@+id/bk_four"
                    android:title="@string/bg4"/>

                <item
                    android:id="@+id/bk_five"
                    android:title="@string/bg5"/>

            </menu>

        </item>

    </group>

</menu>

