<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back7"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one"
            android:textSize="20sp"
            android:textColor="#6699FF"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two"
            android:textSize="20sp"
            android:textColor="#6699FF"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/three"
            android:textSize="20sp"
            android:textColor="#6699FF"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four"
            android:textSize="20sp"
            android:textColor="#6699FF"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/five"
            android:textSize="20sp"
            android:textColor="#6699FF"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/six"
            android:textSize="20sp"
            android:textColor="#6699FF"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <ImageView
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:src="@drawable/carousel11"
            android:scaleType="fitXY"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seven"
            android:textSize="20sp"
            android:textColor="#6699FF"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eight"
            android:textSize="20sp"
            android:textColor="#6699FF"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ten"
            android:textSize="20sp"
            android:textColor="#6699FF"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eleven"
            android:textSize="20sp"
            android:textColor="#6699FF"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twelve"
            android:textSize="20sp"
            android:textColor="#6699FF"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thirteen"
            android:textSize="20sp"
            android:textColor="#6699FF"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fourteen"
            android:textSize="20sp"
            android:textColor="#6699FF"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <ImageView
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:src="@drawable/carousel12"
            android:scaleType="fitXY"
            android:layout_gravity="center"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fifteen"
            android:textSize="20sp"
            android:textColor="#6699FF"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sixteen"
            android:textSize="20sp"
            android:textColor="#6699FF"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seventeen"
            android:textSize="20sp"
            android:textColor="#6699FF"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>

        <ImageView
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:src="@drawable/carousel13"
            android:scaleType="fitXY"
            android:layout_gravity="center"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eighteen"
            android:textSize="20sp"
            android:textColor="#6699FF"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

</ScrollView>
