<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back7"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nineteen"
            android:textSize="20sp"
            android:textColor="#6699FF"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twenty"
            android:textSize="20sp"
            android:textColor="#6699FF"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twenty_one"
            android:textSize="20sp"
            android:textColor="#6699FF"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twenty_two"
            android:textSize="20sp"
            android:textColor="#6699FF"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twenty_three"
            android:textSize="20sp"
            android:textColor="#6699FF"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twenty_four"
            android:textSize="20sp"
            android:textColor="#6699FF"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twenty_five"
            android:textSize="20sp"
            android:textColor="#6699FF"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twenty_six"
            android:textSize="20sp"
            android:textColor="#6699FF"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twenty_nine"
            android:textSize="20sp"
            android:textColor="#6699FF"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <ImageView
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:src="@drawable/carousel21"
            android:layout_marginTop="10dp"
            android:scaleType="fitXY"
            android:layout_gravity="center"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thirty"
            android:textSize="20sp"
            android:textColor="#6699FF"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thirty_one"
            android:textSize="20sp"
            android:textColor="#6699FF"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

</ScrollView>
