<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/back7"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thirty_two"
        android:textSize="30sp"
        android:textColor="#6699FF"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thirty_three"
        android:textSize="30sp"
        android:textColor="#6699FF"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

    <ImageView
        android:layout_marginTop="50dp"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:src="@drawable/carousel31"
        android:layout_gravity="center"
        android:scaleType="fitXY"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thirty_four"
        android:textSize="30sp"
        android:textColor="#6699FF"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>

</LinearLayout>
