<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/time_one"
    >

    <EditText
        android:id="@+id/edit_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:hint="@string/log_user"
        android:layout_marginTop="250dp"/>

    <EditText
        android:id="@+id/edit_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:hint="@string/log_password"
        android:layout_below="@id/edit_one"
        android:layout_marginTop="10dp"/>

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/icon2"
        tools:ignore="ContentDescription"
        android:layout_marginTop="260dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:id="@+id/imageView" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/icon1"
        tools:ignore="ContentDescription"
        android:layout_marginTop="310dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp" />

    <ImageView
        android:id="@+id/ball"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:src="@drawable/ball"
        android:layout_marginTop="100dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/button_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="420dp"
        android:background="#6699FF"
        android:text="@string/log"
        android:textColor="#ffffff"/>

    <TextView
        android:id="@+id/tx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button_one"
        />

</RelativeLayout>
