<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/time_two">

    <EditText
        android:id="@+id/edit_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:hint="@string/log_user"
        android:layout_marginTop="230dp"/>

    <EditText
        android:id="@+id/edit_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:hint="@string/log_password"
        android:layout_below="@id/edit_one"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/edit_three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:hint="@string/register_password"
        android:layout_below="@id/edit_two"
        android:layout_marginTop="10dp"/>

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/sex"
        android:layout_below="@id/edit_three"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/icon4"
        tools:ignore="ContentDescription"
        android:layout_marginTop="240dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/icon3"
        tools:ignore="ContentDescription"
        android:layout_marginTop="290dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/icon6"
        tools:ignore="ContentDescription"
        android:layout_marginTop="350dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/icon5"
        tools:ignore="ContentDescription"
        android:layout_marginTop="410dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp" />

    <Button
        android:id="@+id/button_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@id/spinner"
        android:background="#6699FF"
        android:text="@string/register"
        android:layout_marginTop="15dp"
        android:textColor="#ffffff"/>

    <ImageView
        android:id="@+id/arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow"
        android:layout_marginTop="5dp"
        tools:ignore="ContentDescription" />

</RelativeLayout>
