<?xml version="1.0" encoding="utf-8"?>
<!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.bignerdranch.android.wintervacationhomework.ImageBarnnerFramLayout
            android:id="@+id/image_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        </com.bignerdranch.android.wintervacationhomework.ImageBarnnerFramLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="one"
            android:textSize="30dp"
            android:layout_margin="10dp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="two"
            android:textSize="30dp"
            android:layout_margin="10dp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="three"
            android:textSize="30dp"
            android:layout_margin="10dp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.bignerdranch.android.wintervacationhomework.ImageBarnnerFramLayout
        android:id="@+id/image_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    </com.bignerdranch.android.wintervacationhomework.ImageBarnnerFramLayout>

    <ScrollView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/busy_people"
                android:textStyle="italic"
                android:textSize="30sp"
                android:layout_margin="10dp"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cq_beauty"
                android:textStyle="italic"
                android:textSize="30sp"
                android:layout_margin="10dp"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/handsome"
                android:textStyle="italic"
                android:textSize="30sp"
                android:layout_margin="10dp"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        </LinearLayout>

    </ScrollView>

</LinearLayout>
